python/scl/_bindings/multiple_testing.py

"""
Auto-generated Python bindings for multiple_testing

Source: scl/binding/c_api/multiple_testing.h
Generated by: generate_bindings.py

DO NOT EDIT - This file is automatically generated.
"""

from __future__ import annotations

from ctypes import (
    CFUNCTYPE,
    POINTER,
    Structure,
    c_bool,
    c_char,
    c_char_p,
    c_double,
    c_float,
    c_int,
    c_int8,
    c_int16,
    c_int32,
    c_int64,
    c_long,
    c_longlong,
    c_short,
    c_size_t,
    c_ssize_t,
    c_ubyte,
    c_uint,
    c_uint8,
    c_uint16,
    c_uint32,
    c_uint64,
    c_ulong,
    c_ulonglong,
    c_ushort,
    c_void_p,
    c_wchar_p,
)
from typing import Any, Optional

from .._loader import get_library

# Load the native library
_lib = get_library()


# ===========================================================================
# Functions
# ===========================================================================

# C: int scl_benjamini_hochberg(const scl_real_t * p_values, int n_tests, scl_real_t * adjusted_p_values, double fdr_level)
_lib.scl_benjamini_hochberg.argtypes = [POINTER(c_double), c_int, POINTER(c_double), c_double]
_lib.scl_benjamini_hochberg.restype = c_int

def scl_benjamini_hochberg(p_values, n_tests, adjusted_p_values, fdr_level):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        adjusted_p_values: scl_real_t *
        fdr_level: double
    
    Returns:
        int
    """
    return _lib.scl_benjamini_hochberg(p_values, n_tests, adjusted_p_values, fdr_level)


# C: int scl_bonferroni(const scl_real_t * p_values, int n_tests, scl_real_t * adjusted_p_values)
_lib.scl_bonferroni.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_bonferroni.restype = c_int

def scl_bonferroni(p_values, n_tests, adjusted_p_values):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        adjusted_p_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_bonferroni(p_values, n_tests, adjusted_p_values)


# C: int scl_benjamini_yekutieli(const scl_real_t * p_values, int n_tests, scl_real_t * adjusted_p_values)
_lib.scl_benjamini_yekutieli.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_benjamini_yekutieli.restype = c_int

def scl_benjamini_yekutieli(p_values, n_tests, adjusted_p_values):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        adjusted_p_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_benjamini_yekutieli(p_values, n_tests, adjusted_p_values)


# C: int scl_holm_bonferroni(const scl_real_t * p_values, int n_tests, scl_real_t * adjusted_p_values)
_lib.scl_holm_bonferroni.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_holm_bonferroni.restype = c_int

def scl_holm_bonferroni(p_values, n_tests, adjusted_p_values):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        adjusted_p_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_holm_bonferroni(p_values, n_tests, adjusted_p_values)


# C: int scl_hochberg(const scl_real_t * p_values, int n_tests, scl_real_t * adjusted_p_values)
_lib.scl_hochberg.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_hochberg.restype = c_int

def scl_hochberg(p_values, n_tests, adjusted_p_values):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        adjusted_p_values: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_hochberg(p_values, n_tests, adjusted_p_values)


# C: int scl_storey_qvalue(const scl_real_t * p_values, int n_tests, scl_real_t * q_values, double lambda)
_lib.scl_storey_qvalue.argtypes = [POINTER(c_double), c_int, POINTER(c_double), c_double]
_lib.scl_storey_qvalue.restype = c_int

def scl_storey_qvalue(p_values, n_tests, q_values, lambda):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        q_values: scl_real_t *
        lambda: double
    
    Returns:
        int
    """
    return _lib.scl_storey_qvalue(p_values, n_tests, q_values, lambda)


# C: int scl_local_fdr(const scl_real_t * p_values, int n_tests, scl_real_t * lfdr)
_lib.scl_local_fdr.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_local_fdr.restype = c_int

def scl_local_fdr(p_values, n_tests, lfdr):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        lfdr: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_local_fdr(p_values, n_tests, lfdr)


# C: int scl_count_significant(const scl_real_t * p_values, int n_tests, double threshold, scl_size_t * count)
_lib.scl_count_significant.argtypes = [POINTER(c_double), c_int, c_double, POINTER(c_int)]
_lib.scl_count_significant.restype = c_int

def scl_count_significant(p_values, n_tests, threshold, count):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        threshold: double
        count: scl_size_t *
    
    Returns:
        int
    """
    return _lib.scl_count_significant(p_values, n_tests, threshold, count)


# C: int scl_significant_indices(const scl_real_t * p_values, int n_tests, double threshold, scl_index_t * out_indices, scl_size_t * out_count, int max_count)
_lib.scl_significant_indices.argtypes = [POINTER(c_double), c_int, c_double, POINTER(c_int64), POINTER(c_int), c_int]
_lib.scl_significant_indices.restype = c_int

def scl_significant_indices(p_values, n_tests, threshold, out_indices, out_count, max_count):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        threshold: double
        out_indices: scl_index_t *
        out_count: scl_size_t *
        max_count: int
    
    Returns:
        int
    """
    return _lib.scl_significant_indices(p_values, n_tests, threshold, out_indices, out_count, max_count)


# C: int scl_neglog10_pvalues(const scl_real_t * p_values, int n_tests, scl_real_t * neglog_p)
_lib.scl_neglog10_pvalues.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_neglog10_pvalues.restype = c_int

def scl_neglog10_pvalues(p_values, n_tests, neglog_p):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        neglog_p: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_neglog10_pvalues(p_values, n_tests, neglog_p)


# C: int scl_fisher_combine(const scl_real_t * p_values, int n_tests, scl_real_t * chi2_stat)
_lib.scl_fisher_combine.argtypes = [POINTER(c_double), c_int, POINTER(c_double)]
_lib.scl_fisher_combine.restype = c_int

def scl_fisher_combine(p_values, n_tests, chi2_stat):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        chi2_stat: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_fisher_combine(p_values, n_tests, chi2_stat)


# C: int scl_stouffer_combine(const scl_real_t * p_values, int n_tests, const scl_real_t * weights, scl_real_t * z_score)
_lib.scl_stouffer_combine.argtypes = [POINTER(c_double), c_int, POINTER(c_double), POINTER(c_double)]
_lib.scl_stouffer_combine.restype = c_int

def scl_stouffer_combine(p_values, n_tests, weights, z_score):
    """
    Args:
        p_values: const scl_real_t *
        n_tests: int
        weights: const scl_real_t *
        z_score: scl_real_t *
    
    Returns:
        int
    """
    return _lib.scl_stouffer_combine(p_values, n_tests, weights, z_score)


# ===========================================================================
# Exports
# ===========================================================================

__all__ = [
    "scl_benjamini_hochberg",
    "scl_benjamini_yekutieli",
    "scl_bonferroni",
    "scl_count_significant",
    "scl_fisher_combine",
    "scl_hochberg",
    "scl_holm_bonferroni",
    "scl_local_fdr",
    "scl_neglog10_pvalues",
    "scl_significant_indices",
    "scl_storey_qvalue",
    "scl_stouffer_combine",
]